[package]
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
name = "routerec"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.5.0"
rp2040-hal = { version = "^0.6", features = ["defmt"] }
embedded-hal = "0.2"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
fugit = "0.3"
nb = "1"

[profile.release]
debug = 2
